fix: text align, panel width

--- a/src/components/drpdwnHead/drpdwnHead.module.scss
+++ b/src/components/drpdwnHead/drpdwnHead.module.scss
@@ -19,5 +19,6 @@
         letter-spacing: 0px;
         color: $purple;
         text-transform: capitalize;
+        text-align: center;
     }
 }
